# kleidiai

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  SECURITY.md  WORKSPACE  kai_defs.bzl
benchmark/: README.md  (+1 more)
examples/matmul_clamp_f32_bf16p_bf16p/: CMakeLists.txt  matmul_clamp_f32_bf16p_bf16p.cpp
examples/matmul_clamp_f32_f16pbf16_f16pbf16/: CMakeLists.txt  matmul_clamp_f32_f16pbf16_f16pbf16.cpp
examples/matmul_clamp_f32_qai8dxp_qsi4cxp/: CMakeLists.txt  matmul_clamp_f32_qai8dxp_qsi4cxp.cpp
kai/ukernels/matmul/: BUILD.bazel
kai/ukernels/matmul/matmul_clamp_bf16_bf16_f32p/: kai_matmul_clamp_bf16_bf16_f32p12x1biasf32_8x12x4_neon_mmla.c  kai_matmul_clamp_bf16_bf16_f32p12x1biasf32_8x12x4_neon_mmla.h  matmul_clamp_bf16_bf16_f32p_interface.h
kai/ukernels/matmul/matmul_clamp_f16_bf16p_bf16p/: kai_matmul_clamp_f16_bf16p8x4_bf16p12x4b_8x12_neon_mmla.c  kai_matmul_clamp_f16_bf16p8x4_bf16p12x4b_8x12_neon_mmla.h  kai_matmul_clamp_f16_bf16p_bf16p_interface.h
kai/ukernels/matmul/matmul_clamp_f16_f16_f16p/: kai_matmul_clamp_f16_f16_f16p16x1biasf16_1x16x8_neon_mla.c  kai_matmul_clamp_f16_f16_f16p16x1biasf16_1x16x8_neon_mla.h  kai_matmul_clamp_f16_f16_f16p16x1biasf16_6x16x8_neon_mla.c  kai_matmul_clamp_f16_f16_f16p16x1biasf16_6x16x8_neon_mla.h  kai_matmul_clamp_f16_f16_f16p32x1biasf16_6x32x8_neon_mla.c  kai_matmul_clamp_f16_f16_f16p32x1biasf16_6x32x8_neon_mla.h  kai_matmul_clamp_f16_f16_f16p_interface.h  kai_matmul_clamp_f16_f16_f16pbiasf16_6x16_neon_fp16_mla.c  kai_matmul_clamp_f16_f16_f16pbiasf16_6x16_neon_fp16_mla.h
kai/ukernels/matmul/matmul_clamp_f16_f16p_f16p/: kai_matmul_clamp_f16_f16p2vlx1_f16p2vlx1b_2vlx2vl_sme2_mopa.c  kai_matmul_clamp_f16_f16p2vlx1_f16p2vlx1b_2vlx2vl_sme2_mopa.h  kai_matmul_clamp_f16_f16p_f16pb_2vlx2vl_sme2_mopa.c  kai_matmul_clamp_f16_f16p_f16pb_2vlx2vl_sme2_mopa.h
kai/ukernels/matmul/matmul_clamp_f32_bf16p_bf16p/: kai_matmul_clamp_f32_bf16p1x4_bf16p12x4b_1x36_neon_dot.h  kai_matmul_clamp_f32_bf16p8x4_bf16p12x4b_8x12_neon_mmla.c  kai_matmul_clamp_f32_bf16p8x4_bf16p12x4b_8x12x4_neon_mmla.c  kai_matmul_clamp_f32_bf16p8x4_bf16p12x4b_8x12x4_neon_mmla.h  kai_matmul_clamp_f32_bf16p_bf16p12x1biasf32_8x12x4_neon_mmla.c  kai_matmul_clamp_f32_bf16p_bf16p12x1biasf32_8x12x4_neon_mmla.h  kai_matmul_clamp_f32_bf16p_bf16p12x4b_1x12x4_neon_mmla.c  kai_matmul_clamp_f32_bf16p_bf16p12x4b_1x12x4_neon_mmla.h  kai_matmul_clamp_f32_bf16p_bf16p12x4b_1x36x4_neon_dot.c  kai_matmul_clamp_f32_bf16p_bf16p12x4b_1x36x4_neon_dot.h  kai_matmul_clamp_f32_bf16p_bf16p12x4b_1x36x4_neon_mmla.c  kai_matmul_clamp_f32_bf16p_bf16p12x4b_1x36x4_neon_mmla.h  kai_matmul_clamp_f32_bf16p_bf16p12x4b_8x12x4_neon_mmla.c  kai_matmul_clamp_f32_bf16p_bf16p12x4b_8x12x4_neon_mmla.h  kai_matmul_clamp_f32_bf16p_bf16p12x4biasf32_8x12x4_neon_mmla.c  kai_matmul_clamp_f32_bf16p_bf16p12x4biasf32_8x12x4_neon_mmla.h  kai_matmul_clamp_f32_bf16p_bf16p_interface.h  matmul_clamp_f32_bf16p_bf16p_interface.h
kai/ukernels/matmul/matmul_clamp_f32_f32_bf16p/: kai_matmul_clamp_f32_f32_bf16p4x1biasf32_4x24x4_neon_mmla.c  kai_matmul_clamp_f32_f32_bf16p4x1biasf32_4x24x4_neon_mmla.h  matmul_clamp_f32_f32_bf16p_interface.h
kai/ukernels/matmul/matmul_clamp_f32_f32_f32p/: kai_matmul_clamp_f32_f32_f32p2vlx1b_1x16vl_sme2_mla.c  kai_matmul_clamp_f32_f32_f32p8x1biasf32_1x8x4_neon_mla.c  kai_matmul_clamp_f32_f32_f32p8x1biasf32_1x8x4_neon_mla.h  kai_matmul_clamp_f32_f32_f32p8x1biasf32_6x8x4_neon_mla.c  kai_matmul_clamp_f32_f32_f32p_interface.h  kai_matmul_clamp_f32_f32_f32pb_1x16vl_sme2_mla.c  kai_matmul_clamp_f32_f32_f32pb_1x16vl_sme2_mla.h  kai_matmul_clamp_f32_f32_f32pbiasf32_6x8_neon_mla.c  kai_matmul_clamp_f32_f32_f32pbiasf32_6x8_neon_mla.h
kai/ukernels/matmul/matmul_clamp_f32_f32p_f32p/: kai_matmul_clamp_f32_f32p2vlx1_f32p2vlx1biasf32_sme2_mopa.c  kai_matmul_clamp_f32_f32p_f32p_interface.h  kai_matmul_clamp_f32_f32p_f32pb_2vlx2vl_sme2_mopa.c  kai_matmul_clamp_f32_f32p_f32pb_2vlx2vl_sme2_mopa.h
kai/ukernels/matmul/matmul_clamp_f32_qai8dxp_qsi4c32p/: kai_matmul_clamp_f32_qai8dxp1x8_qsi4c32p4x8_1x4x32_neon_dotprod.c  kai_matmul_clamp_f32_qai8dxp1x8_qsi4c32p8x8_1x8x32_neon_dotprod.c  kai_matmul_clamp_f32_qai8dxp4x8_qsi4c32p4x8_16x4x32_neon_i8mm.c  kai_matmul_clamp_f32_qai8dxp4x8_qsi4c32p4x8_8x4x32_neon_i8mm.c  kai_matmul_clamp_f32_qai8dxp4x8_qsi4c32p8x8_4x8x32_neon_i8mm.c  kai_matmul_clamp_f32_qai8dxp_qsi4c32p_interface.h
kai/ukernels/matmul/matmul_clamp_f32_qai8dxp_qsi4cxp/: kai_matmul_clamp_f32_qai8dxp1vlx8_qsi4cxp4vlx8_1vlx4vl_sme2_mopa.c  kai_matmul_clamp_f32_qai8dxp1vlx8_qsi4cxp4vlx8_1vlx4vl_sme2_mopa.h  kai_matmul_clamp_f32_qai8dxp1x4_qsi4cxpo1vlx4_sme2_sdot.c  kai_matmul_clamp_f32_qai8dxp1x4_qsi4cxpo1vlx4_sme2_sdot.h  kai_matmul_clamp_f32_qai8dxp1x8_qsi4cxp4x8_1x4x32_neon_dotprod.c  kai_matmul_clamp_f32_qai8dxp1x8_qsi4cxp4x8_1x4x32_neon_dotprod.h  kai_matmul_clamp_f32_qai8dxp1x8_qsi4cxp8x8_1x8x32_neon_dotprod.c  kai_matmul_clamp_f32_qai8dxp1x8_qsi4cxp8x8_1x8x32_neon_dotprod.h  kai_matmul_clamp_f32_qai8dxp4x8_qsi4cxp4x4_16x4x32_neon_dotprod.c  kai_matmul_clamp_f32_qai8dxp4x8_qsi4cxp4x8_4x4x32_neon_i8mm.c  kai_matmul_clamp_f32_qai8dxp4x8_qsi4cxp4x8_4x4x32_neon_i8mm.h  kai_matmul_clamp_f32_qai8dxp4x8_qsi4cxp4x8_8x4x32_neon_i8mm.c  kai_matmul_clamp_f32_qai8dxp4x8_qsi4cxp4x8_8x4x32_neon_i8mm.h  kai_matmul_clamp_f32_qai8dxp4x8_qsi4cxp8x4_8x8x32_neon_dotprod.c  kai_matmul_clamp_f32_qai8dxp4x8_qsi4cxp8x4_8x8x32_neon_dotprod.h  kai_matmul_clamp_f32_qai8dxp4x8_qsi4cxp8x8_4x8x32_neon_i8mm.c  kai_matmul_clamp_f32_qai8dxp4x8_qsi4cxp8x8_4x8x32_neon_i8mm.h  kai_matmul_clamp_f32_qai8dxp4x8_qsi4cxp8x8_8x8x32_neon_i8mm.c  kai_matmul_clamp_f32_qai8dxp4x8_qsi4cxp8x8_8x8x32_neon_i8mm.h  kai_matmul_clamp_f32_qai8dxp_qsi4cxp_interface.h
kai/ukernels/matmul/matmul_clamp_f32_qsi8d32p_qsi4c32p/: kai_matmul_clamp_f32_qsi8d32p1x8_qsi4c32p4x8_1x4x32_neon_dotprod.c  kai_matmul_clamp_f32_qsi8d32p4x8_qsi4c32p4x8_16x4x32_neon_i8mm.c  kai_matmul_clamp_f32_qsi8d32p4x8_qsi4c32p4x8_16x4x32_neon_i8mm.h  kai_matmul_clamp_f32_qsi8d32p4x8_qsi4c32p4x8_8x4x32_neon_i8mm.c  (+1 more)
(+173 files in other folders)
