#
# SPDX-FileCopyrightText: Copyright 2024 Arm Limited and/or its affiliates <open-source-office@arm.com>
#
# SPDX-License-Identifier: Apache-2.0
#

load(
    "//:kai_defs.bzl",
    "kai_c_library",
    "kai_cpu_bf16",
    "kai_cpu_dotprod",
    "kai_cpu_fp16",
    "kai_cpu_i8mm",
    "kai_cpu_neon",
    "kai_cpu_sme",
)

package(default_visibility = ["//visibility:public"])

kai_c_library(
    name = "clamp_f16_f16_f16p_interface",
    hdrs = ["matmul_clamp_f16_f16_f16p/kai_matmul_clamp_f16_f16_f16p_interface.h"],
    cpu_uarch = kai_cpu_fp16(),
)

kai_c_library(
    name = "clamp_f16_f16_f16p16x1biasf16_6x16x8_neon_mla",
    srcs = ["matmul_clamp_f16_f16_f16p/kai_matmul_clamp_f16_f16_f16p16x1biasf16_6x16x8_neon_mla.c"],
    hdrs = ["matmul_clamp_f16_f16_f16p/kai_matmul_clamp_f16_f16_f16p16x1biasf16_6x16x8_neon_mla.h"],
    cpu_uarch = kai_cpu_fp16(),
    deps = [
        ":clamp_f16_f16_f16p_interface",
    ],
)

kai_c_library(
    name = "clamp_f32_bf16p_bf16p_interface",
    hdrs = ["matmul_clamp_f32_bf16p_bf16p/kai_matmul_clamp_f32_bf16p_bf16p_interface.h"],
    cpu_uarch = kai_cpu_bf16(),
)

kai_c_library(
    name = "clamp_f32_bf16p_bf16p_neon_mmla",
    srcs = [
        "matmul_clamp_f32_bf16p_bf16p/kai_matmul_clamp_f32_bf16p_bf16p12x4b_1x36x4_neon_dot.c",
        "matmul_clamp_f32_bf16p_bf16p/kai_matmul_clamp_f32_bf16p_bf16p12x4b_8x12x4_neon_mmla.c",
    ],
    hdrs = [
        "matmul_clamp_f32_bf16p_bf16p/kai_matmul_clamp_f32_bf16p_bf16p12x4b_1x36x4_neon_dot.h",
        "matmul_clamp_f32_bf16p_bf16p/kai_matmul_clamp_f32_bf16p_bf16p12x4b_8x12x4_neon_mmla.h",
    ],
    cpu_uarch = kai_cpu_bf16(),
    deps = [
        ":clamp_f32_bf16p_bf16p_interface",
    ],
)

kai_c_library(
    name = "clamp_f32_bf16p_bf16p12x1biasf32_1x12x4_neon_mmla",
    srcs = ["matmul_clamp_f32_bf16p_bf16p/kai_matmul_clamp_f32_bf16p_bf16p12x4b_1x36x4_neon_dot.c"],
    hdrs = ["matmul_clamp_f32_bf16p_bf16p/kai_matmul_clamp_f32_bf16p_bf16p12x4b_1x36x4_neon_dot.h"],
    cpu_uarch = kai_cpu_bf16(),
    deps = [
        ":clamp_f32_bf16p_bf16p_interface",
    ],
)

kai_c_library(
    name = "clamp_f32_f32_f32p",
    srcs = ["matmul_clamp_f32_f32_f32p/kai_matmul_clamp_f32_f32_f32p8x1biasf32_6x8x4_neon_mla.c"],
    hdrs = ["matmul_clamp_f32_f32_f32p/kai_matmul_clamp_f32_f32_f32p8x1biasf32_6x8x4_neon_mla.h"],
    cpu_uarch = kai_cpu_neon(),
)

kai_c_library(
    name = "clamp_f32_f32p_f32p",
    srcs = ["matmul_clamp_f32_f32p_f32p/kai_matmul_clamp_f32_f32p2vlx1_f32p2vlx1biasf32_sme2_mopa.c"],
    hdrs = ["matmul_clamp_f32_f32p_f32p/kai_matmul_clamp_f32_f32p2vlx1_f32p2vlx1biasf32_sme2_mopa.h"],
    cpu_uarch = kai_cpu_sme(),
)

kai_c_library(
    name = "clamp_f32_f32_f32pb_1x16vl_sme2_mla",
    srcs = ["matmul_clamp_f32_f32_f32p/kai_matmul_clamp_f32_f32_f32pb_1x16vl_sme2_mla.c"],
    hdrs = ["matmul_clamp_f32_f32_f32p/kai_matmul_clamp_f32_f32_f32pb_1x16vl_sme2_mla.h"],
    cpu_uarch = kai_cpu_sme(),
)

cc_library(
    name = "clamp_f32_qai8dxp_qsi4cxp_interface",
    hdrs = ["matmul_clamp_f32_qai8dxp_qsi4cxp/kai_matmul_clamp_f32_qai8dxp_qsi4cxp_interface.h"],
)

kai_c_library(
    name = "clamp_f32_qai8dxp1x8_qsi4cxp4x8_1x4x32_neon_dotprod",
    srcs = ["matmul_clamp_f32_qai8dxp_qsi4cxp/kai_matmul_clamp_f32_qai8dxp1x8_qsi4cxp4x8_1x4x32_neon_dotprod.c"],
    hdrs = ["matmul_clamp_f32_qai8dxp_qsi4cxp/kai_matmul_clamp_f32_qai8dxp1x8_qsi4cxp4x8_1x4x32_neon_dotprod.h"],
    cpu_uarch = kai_cpu_dotprod(),
    deps = [
        ":clamp_f32_qai8dxp_qsi4cxp_interface",
    ],
)

kai_c_library(
    name = "clamp_f32_qai8dxp1x8_qsi4cxp8x8_1x8x32_neon_dotprod",
    srcs = ["matmul_clamp_f32_qai8dxp_qsi4cxp/kai_matmul_clamp_f32_qai8dxp1x8_qsi4cxp8x8_1x8x32_neon_dotprod.c"],
    hdrs = ["matmul_clamp_f32_qai8dxp_qsi4cxp/kai_matmul_clamp_f32_qai8dxp1x8_qsi4cxp8x8_1x8x32_neon_dotprod.h"],
    cpu_uarch = kai_cpu_dotprod(),
    deps = [
        ":clamp_f32_qai8dxp_qsi4cxp_interface",
    ],
)

kai_c_library(
    name = "clamp_f32_qai8dxp4x8_qsi4cxp4x4_16x4x32_neon_dotprod",
    srcs = ["matmul_clamp_f32_qai8dxp_qsi4cxp/kai_matmul_clamp_f32_qai8dxp4x8_qsi4cxp4x4_16x4x32_neon_dotprod.c"],
    hdrs = ["matmul_clamp_f32_qai8dxp_qsi4cxp/kai_matmul_clamp_f32_qai8dxp4x8_qsi4cxp4x4_16x4x32_neon_dotprod.h"],
    cpu_uarch = kai_cpu_dotprod(),
    deps = [
        ":clamp_f32_qai8dxp_qsi4cxp_interface",
    ],
)

kai_c_library(
    name = "clamp_f32_qai8dxp4x8_qsi4cxp8x4_8x8x32_neon_dotprod",
    srcs = ["matmul_clamp_f32_qai8dxp_qsi4cxp/kai_matmul_clamp_f32_qai8dxp4x8_qsi4cxp8x4_8x8x32_neon_dotprod.c"],
    hdrs = ["matmul_clamp_f32_qai8dxp_qsi4cxp/kai_matmul_clamp_f32_qai8dxp4x8_qsi4cxp8x4_8x8x32_neon_dotprod.h"],
    cpu_uarch = kai_cpu_dotprod(),
    deps = [
        ":clamp_f32_qai8dxp_qsi4cxp_interface",
    ],
)

kai_c_library(
    name = "clamp_f32_qai8dxp4x8_qsi4cxp4x8_4x4x32_neon_i8mm",
    srcs = ["matmul_clamp_f32_qai8dxp_qsi4cxp/kai_matmul_clamp_f32_qai8dxp4x8_qsi4cxp4x8_4x4x32_neon_i8mm.c"],
    hdrs = ["matmul_clamp_f32_qai8dxp_qsi4cxp/kai_matmul_clamp_f32_qai8dxp4x8_qsi4cxp4x8_4x4x32_neon_i8mm.h"],
    cpu_uarch = kai_cpu_i8mm(),
    deps = [
        ":clamp_f32_qai8dxp_qsi4cxp_interface",
    ],
)

kai_c_library(
    name = "clamp_f32_qai8dxp4x8_qsi4cxp4x8_8x4x32_neon_i8mm",
    srcs = ["matmul_clamp_f32_qai8dxp_qsi4cxp/kai_matmul_clamp_f32_qai8dxp4x8_qsi4cxp4x8_8x4x32_neon_i8mm.c"],
    hdrs = ["matmul_clamp_f32_qai8dxp_qsi4cxp/kai_matmul_clamp_f32_qai8dxp4x8_qsi4cxp4x8_8x4x32_neon_i8mm.h"],
    cpu_uarch = kai_cpu_i8mm(),
    deps = [
        ":clamp_f32_qai8dxp_qsi4cxp_interface",
    ],
)

kai_c_library(
    name = "clamp_f32_qai8dxp4x8_qsi4cxp8x8_4x8x32_neon_i8mm",
    srcs = ["matmul_clamp_f32_qai8dxp_qsi4cxp/kai_matmul_clamp_f32_qai8dxp4x8_qsi4cxp8x8_4x8x32_neon_i8mm.c"],
    hdrs = ["matmul_clamp_f32_qai8dxp_qsi4cxp/kai_matmul_clamp_f32_qai8dxp4x8_qsi4cxp8x8_4x8x32_neon_i8mm.h"],
    cpu_uarch = kai_cpu_i8mm(),
    deps = [
        ":clamp_f32_qai8dxp_qsi4cxp_interface",
    ],
)

kai_c_library(
    name = "clamp_f32_qai8dxp4x8_qsi4cxp8x8_8x8x32_neon_i8mm",
    srcs = ["matmul_clamp_f32_qai8dxp_qsi4cxp/kai_matmul_clamp_f32_qai8dxp4x8_qsi4cxp8x8_8x8x32_neon_i8mm.c"],
    hdrs = ["matmul_clamp_f32_qai8dxp_qsi4cxp/kai_matmul_clamp_f32_qai8dxp4x8_qsi4cxp8x8_8x8x32_neon_i8mm.h"],
    cpu_uarch = kai_cpu_i8mm(),
    deps = [
        ":clamp_f32_qai8dxp_qsi4cxp_interface",
    ],
)

kai_c_library(
    name = "lhs_quant_pack_qai8dxp_f32",
    srcs = ["pack/kai_lhs_quant_pack_qai8dxp_f32.c"],
    hdrs = ["pack/kai_lhs_quant_pack_qai8dxp_f32.h"],
    cpu_uarch = kai_cpu_neon(),
)

kai_c_library(
    name = "lhs_quant_pack_qsi8d32p_f32",
    srcs = ["pack/kai_lhs_quant_pack_qsi8d32p_f32.c"],
    hdrs = ["pack/kai_lhs_quant_pack_qsi8d32p_f32.h"],
    cpu_uarch = kai_cpu_neon(),
)

kai_c_library(
    name = "lhs_pack_f32p2vlx1_f32_sme",
    srcs = ["pack/kai_lhs_pack_f32p2vlx1_f32_sme.c"],
    hdrs = ["pack/kai_lhs_pack_f32p2vlx1_f32_sme.h"],
    cpu_uarch = kai_cpu_sme(),
)

kai_c_library(
    name = "lhs_quant_pack_bf16p_f32_neon",
    srcs = ["pack/kai_lhs_quant_pack_bf16p_f32_neon.c"],
    hdrs = ["pack/kai_lhs_quant_pack_bf16p_f32_neon.h"],
    cpu_uarch = kai_cpu_bf16(),
)

kai_c_library(
    name = "rhs_pack_kxn_f16p16x1biasf16_f16_f16_neon",
    srcs = ["pack/kai_rhs_pack_kxn_f16p16x1biasf16_f16_f16_neon.c"],
    hdrs = ["pack/kai_rhs_pack_kxn_f16p16x1biasf16_f16_f16_neon.h"],
    cpu_uarch = kai_cpu_fp16(),
)

kai_c_library(
    name = "rhs_quant_pack_kxn_bf16pbiasf32_f32_neon",
    srcs = ["pack/kai_rhs_quant_pack_kxn_bf16pbiasf32_f32_neon.c"],
    hdrs = ["pack/kai_rhs_quant_pack_kxn_bf16pbiasf32_f32_neon.h"],
    cpu_uarch = kai_cpu_bf16(),
)

kai_c_library(
    name = "rhs_pack_kxn_f32pbiasf32_f32_f32_neon",
    srcs = ["pack/kai_rhs_pack_kxn_f32p8x1biasf32_f32_f32_neon.c"],
    hdrs = ["pack/kai_rhs_pack_kxn_f32p8x1biasf32_f32_f32_neon.h"],
    cpu_uarch = kai_cpu_neon(),
)

kai_c_library(
    name = "rhs_pack_kxn_f32p2vlx1biasf32_f32_f32_sme",
    srcs = ["pack/kai_rhs_pack_kxn_f32p2vlx1biasf32_f32_f32_sme.c"],
    hdrs = ["pack/kai_rhs_pack_kxn_f32p2vlx1biasf32_f32_f32_sme.h"],
    cpu_uarch = kai_cpu_sme(),
)

kai_c_library(
    name = "rhs_pack_nxk_f32p2vlx1biasf32_f32_f32_sme",
    srcs = ["pack/kai_rhs_pack_nxk_f32p2vlx1biasf32_f32_f32_sme.c"],
    hdrs = ["pack/kai_rhs_pack_nxk_f32p2vlx1biasf32_f32_f32_sme.h"],
    cpu_uarch = kai_cpu_sme(),
)

kai_c_library(
    name = "rhs_pack_kxn_f32pb_f32_f32_16vlx1_sme",
    srcs = ["pack/kai_rhs_pack_kxn_f32pb_f32_f32_16vlx1_sme.c"],
    hdrs = ["pack/kai_rhs_pack_kxn_f32pb_f32_f32_16vlx1_sme.h"],
    cpu_uarch = kai_cpu_sme(),
)

kai_c_library(
    name = "rhs_pack_nxk_qsi4cxp_qs4cxs1s0",
    srcs = ["pack/kai_rhs_pack_nxk_qsi4cxp_qs4cxs1s0.c"],
    hdrs = ["pack/kai_rhs_pack_nxk_qsi4cxp_qs4cxs1s0.h"],
    cpu_uarch = kai_cpu_neon(),
)

kai_c_library(
    name = "rhs_pack_kxn_qsi4cxp_qs4cxs1s0",
    srcs = ["pack/kai_rhs_pack_kxn_qsi4cxp_qs4cxs1s0.c"],
    hdrs = ["pack/kai_rhs_pack_kxn_qsi4cxp_qs4cxs1s0.h"],
    cpu_uarch = kai_cpu_neon(),
)

cc_library(
    name = "clamp_f32_qsi8d32p_qsi4c32p_interface",
    hdrs = ["matmul_clamp_f32_qsi8d32p_qsi4c32p/kai_matmul_clamp_f32_qsi8d32p_qsi4c32p_interface.h"],
)

kai_c_library(
    name = "clamp_f32_qsi8d32p_qsi4c32p_dotprod",
    srcs = ["matmul_clamp_f32_qsi8d32p_qsi4c32p/kai_matmul_clamp_f32_qsi8d32p1x8_qsi4c32p4x8_1x4x32_neon_dotprod.c"],
    hdrs = ["matmul_clamp_f32_qsi8d32p_qsi4c32p/kai_matmul_clamp_f32_qsi8d32p1x8_qsi4c32p4x8_1x4x32_neon_dotprod.h"],
    cpu_uarch = kai_cpu_dotprod(),
    deps = [
        ":clamp_f32_qsi8d32p_qsi4c32p_interface",
    ],
)

kai_c_library(
    name = "clamp_f32_qsi8d32p_qsi4c32p_i8mm",
    srcs = ["matmul_clamp_f32_qsi8d32p_qsi4c32p/kai_matmul_clamp_f32_qsi8d32p4x8_qsi4c32p4x8_8x4x32_neon_i8mm.c"],
    hdrs = ["matmul_clamp_f32_qsi8d32p_qsi4c32p/kai_matmul_clamp_f32_qsi8d32p4x8_qsi4c32p4x8_8x4x32_neon_i8mm.h"],
    cpu_uarch = kai_cpu_i8mm(),
    deps = [
        ":clamp_f32_qsi8d32p_qsi4c32p_interface",
    ],
)

kai_c_library(
    name = "rhs_pack_nxk_qsi4c32pscalef16_qsu4c32s16s0",
    srcs = ["pack/kai_rhs_pack_nxk_qsi4c32pscalef16_qsu4c32s16s0.c"],
    hdrs = ["pack/kai_rhs_pack_nxk_qsi4c32pscalef16_qsu4c32s16s0.h"],
    cpu_uarch = kai_cpu_neon(),
)

cc_library(
    name = "clamp_f32_qai8dxp_qsi4c32p_interface",
    hdrs = ["matmul_clamp_f32_qai8dxp_qsi4c32p/kai_matmul_clamp_f32_qai8dxp_qsi4c32p_interface.h"],
)

kai_c_library(
    name = "clamp_f32_qai8dxp1x8_qsi4c32p4x8_1x4x32_neon_dotprod",
    srcs = ["matmul_clamp_f32_qai8dxp_qsi4c32p/kai_matmul_clamp_f32_qai8dxp1x8_qsi4c32p4x8_1x4x32_neon_dotprod.c"],
    hdrs = ["matmul_clamp_f32_qai8dxp_qsi4c32p/kai_matmul_clamp_f32_qai8dxp1x8_qsi4c32p4x8_1x4x32_neon_dotprod.h"],
    cpu_uarch = kai_cpu_dotprod(),
    deps = [
        ":clamp_f32_qai8dxp_qsi4c32p_interface",
    ],
)

kai_c_library(
    name = "clamp_f32_qai8dxp1x8_qsi4c32p8x8_1x8x32_neon_dotprod",
    srcs = ["matmul_clamp_f32_qai8dxp_qsi4c32p/kai_matmul_clamp_f32_qai8dxp1x8_qsi4c32p8x8_1x8x32_neon_dotprod.c"],
    hdrs = ["matmul_clamp_f32_qai8dxp_qsi4c32p/kai_matmul_clamp_f32_qai8dxp1x8_qsi4c32p8x8_1x8x32_neon_dotprod.h"],
    cpu_uarch = kai_cpu_dotprod(),
    deps = [
        ":clamp_f32_qai8dxp_qsi4c32p_interface",
    ],
)

kai_c_library(
    name = "clamp_f32_qai8dxp4x8_qsi4c32p4x8_8x4x32_neon_i8mm",
    srcs = ["matmul_clamp_f32_qai8dxp_qsi4c32p/kai_matmul_clamp_f32_qai8dxp4x8_qsi4c32p4x8_8x4x32_neon_i8mm.c"],
    hdrs = ["matmul_clamp_f32_qai8dxp_qsi4c32p/kai_matmul_clamp_f32_qai8dxp4x8_qsi4c32p4x8_8x4x32_neon_i8mm.h"],
    cpu_uarch = kai_cpu_i8mm(),
    deps = [
        ":clamp_f32_qai8dxp_qsi4c32p_interface",
    ],
)

kai_c_library(
    name = "clamp_f32_qai8dxp4x8_qsi4c32p8x8_4x8x32_neon_i8mm",
    srcs = ["matmul_clamp_f32_qai8dxp_qsi4c32p/kai_matmul_clamp_f32_qai8dxp4x8_qsi4c32p8x8_4x8x32_neon_i8mm.c"],
    hdrs = ["matmul_clamp_f32_qai8dxp_qsi4c32p/kai_matmul_clamp_f32_qai8dxp4x8_qsi4c32p8x8_4x8x32_neon_i8mm.h"],
    cpu_uarch = kai_cpu_i8mm(),
    deps = [
        ":clamp_f32_qai8dxp_qsi4c32p_interface",
    ],
)

kai_c_library(
    name = "clamp_f32_qai8dxp4x8_qsi4c32p4x8_16x4x32_neon_i8mm",
    srcs = ["matmul_clamp_f32_qai8dxp_qsi4c32p/kai_matmul_clamp_f32_qai8dxp4x8_qsi4c32p4x8_16x4x32_neon_i8mm.c"],
    hdrs = ["matmul_clamp_f32_qai8dxp_qsi4c32p/kai_matmul_clamp_f32_qai8dxp4x8_qsi4c32p4x8_16x4x32_neon_i8mm.h"],
    cpu_uarch = kai_cpu_i8mm(),
    deps = [
        ":clamp_f32_qai8dxp_qsi4c32p_interface",
    ],
)

kai_c_library(
    name = "rhs_pack_nxk_qsi4c32p_qsu4c32s1s0",
    srcs = ["pack/kai_rhs_pack_nxk_qsi4c32p_qsu4c32s1s0.c"],
    hdrs = ["pack/kai_rhs_pack_nxk_qsi4c32p_qsu4c32s1s0.h"],
    cpu_uarch = kai_cpu_neon(),
)

kai_c_library(
    name = "rhs_pack_kxn_qsi4c32p_qsu4c32s1s0",
    srcs = ["pack/kai_rhs_pack_kxn_qsi4c32p_qsu4c32s1s0.c"],
    hdrs = ["pack/kai_rhs_pack_kxn_qsi4c32p_qsu4c32s1s0.h"],
    cpu_uarch = kai_cpu_neon(),
)

kai_c_library(
    name = "matmul",
    deps = [
        ":clamp_f16_f16_f16p16x1biasf16_6x16x8_neon_mla",
        ":clamp_f32_bf16p_bf16p_neon_mmla",
        ":clamp_f32_f32_f32p",
        ":clamp_f32_f32_f32pb_1x16vl_sme2_mla",
        ":clamp_f32_f32p_f32p",
        ":clamp_f32_qai8dxp1x8_qsi4c32p4x8_1x4x32_neon_dotprod",
        ":clamp_f32_qai8dxp1x8_qsi4c32p8x8_1x8x32_neon_dotprod",
        ":clamp_f32_qai8dxp1x8_qsi4cxp4x8_1x4x32_neon_dotprod",
        ":clamp_f32_qai8dxp1x8_qsi4cxp8x8_1x8x32_neon_dotprod",
        ":clamp_f32_qai8dxp4x8_qsi4c32p4x8_16x4x32_neon_i8mm",
        ":clamp_f32_qai8dxp4x8_qsi4c32p4x8_8x4x32_neon_i8mm",
        ":clamp_f32_qai8dxp4x8_qsi4c32p8x8_4x8x32_neon_i8mm",
        ":clamp_f32_qai8dxp4x8_qsi4cxp4x4_16x4x32_neon_dotprod",
        ":clamp_f32_qai8dxp4x8_qsi4cxp4x8_4x4x32_neon_i8mm",
        ":clamp_f32_qai8dxp4x8_qsi4cxp4x8_8x4x32_neon_i8mm",
        ":clamp_f32_qai8dxp4x8_qsi4cxp8x4_8x8x32_neon_dotprod",
        ":clamp_f32_qai8dxp4x8_qsi4cxp8x8_4x8x32_neon_i8mm",
        ":clamp_f32_qai8dxp4x8_qsi4cxp8x8_8x8x32_neon_i8mm",
        ":clamp_f32_qai8dxp_qsi4c32p_interface",
        ":clamp_f32_qsi8d32p_qsi4c32p_dotprod",
        ":clamp_f32_qsi8d32p_qsi4c32p_i8mm",
        ":clamp_f32_qsi8d32p_qsi4c32p_interface",
        ":lhs_pack_f32p2vlx1_f32_sme",
        ":lhs_quant_pack_bf16p_f32_neon",
        ":lhs_quant_pack_qai8dxp_f32",
        ":lhs_quant_pack_qsi8d32p_f32",
        ":rhs_pack_kxn_f16p16x1biasf16_f16_f16_neon",
        ":rhs_pack_kxn_f32p2vlx1biasf32_f32_f32_sme",
        ":rhs_pack_kxn_f32pb_f32_f32_16vlx1_sme",
        ":rhs_pack_kxn_f32pbiasf32_f32_f32_neon",
        ":rhs_pack_kxn_qsi4c32p_qsu4c32s1s0",
        ":rhs_pack_kxn_qsi4cxp_qs4cxs1s0",
        ":rhs_pack_nxk_f32p2vlx1biasf32_f32_f32_sme",
        ":rhs_pack_nxk_qsi4c32p_qsu4c32s1s0",
        ":rhs_pack_nxk_qsi4c32pscalef16_qsu4c32s16s0",
        ":rhs_pack_nxk_qsi4cxp_qs4cxs1s0",
        ":rhs_quant_pack_kxn_bf16pbiasf32_f32_neon",
    ],
)
